// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`events go to level 6 1`] = `
Object {
  "response": Object {
    "outputSpeech": Object {
      "ssml": "<speak>level 6.<break strength=\\"strong\\"/><audio src=\\"https://alexa-ear-trainer.s3-us-west-2.amazonaws.com/media/reference_C-MINOR.mp3\\"/><break strength=\\"strong\\"/><audio src=\\"https://alexa-ear-trainer.s3-us-west-2.amazonaws.com/media/C4.mp3\\"/></speak>",
      "type": "SSML",
    },
    "reprompt": Object {
      "outputSpeech": Object {
        "ssml": "<speak><audio src=\\"https://alexa-ear-trainer.s3-us-west-2.amazonaws.com/media/reference_C-MINOR.mp3\\"/><break strength=\\"strong\\"/><audio src=\\"https://alexa-ear-trainer.s3-us-west-2.amazonaws.com/media/C4.mp3\\"/></speak>",
        "type": "SSML",
      },
    },
    "shouldEndSession": false,
  },
  "sessionAttributes": Object {
    "currentRound": Object {
      "key": 0,
      "roundNumber": 1,
      "targetInterval": 0,
    },
    "level": 6,
    "state": "LEVEL_IN_PROGRESS",
    "stats": Array [],
  },
  "userAgent": "ask-node/2.7.0 Node/v12.13.0",
  "version": "1.0",
}
`;

exports[`events interrupt alexa with cancel 1`] = `
Object {
  "response": Object {
    "outputSpeech": Object {
      "ssml": "<speak>Thanks for playing!</speak>",
      "type": "SSML",
    },
    "shouldEndSession": true,
  },
  "sessionAttributes": Object {
    "currentRound": Object {
      "intervalDistance": 2,
      "referenceNote": 60,
      "roundNumber": 1,
      "targetNote": 62,
    },
    "level": 1,
    "stats": Array [],
  },
  "userAgent": "ask-node/2.7.0 Node/v12.13.0",
  "version": "1.0",
}
`;

exports[`events user-initiated exit event 1`] = `
Object {
  "response": Object {},
  "sessionAttributes": Object {
    "currentRound": Object {
      "intervalDistance": 5,
      "referenceNote": 60,
      "roundNumber": 1,
      "targetNote": 65,
    },
    "level": 1,
    "stats": Array [],
  },
  "userAgent": "ask-node/2.7.0 Node/v12.13.0",
  "version": "1.0",
}
`;
